tests/should_fail/bug/1439.stderr
1439.rs:5:18: error[E0004]: non-exhaustive patterns: `None` and `Some(_)` not covered: patterns `None` and `Some(_)` not covered
error: aborting due to 1 previous error
